--- a/qrcode-generator/style.css
+++ b/qrcode-generator/style.css
@@ -1,126 +1,131 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+:root {
+  --orange: #d4a373;
+  --light-orange: #faedcd;
+  --light-yellow: #fefae0;
+  --beige: #e9edc9;
+  --light-green: #ccd5ae;
+}
+
+body {
+  background: rgb(189, 224, 254);
+  background: radial-gradient(
+    circle,
+    var(--beige) 0%,
+    var(--light-orange) 50%,
+    var(--orange) 100%
+  );
+  height: 100vh;
+}
+
+.container {
+  width: 400px;
+  padding: 25px 35px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.container p {
+  font-weight: 600;
+  color: var(--orange);
+  font-size: 18px;
+  margin-bottom: 0.5rem;
+}
+
+.container input {
+  width: 100%;
+  padding: 10px 20px;
+  margin: 10px 0;
+  font-size: 18px;
+  border-radius: 5px;
+  border: 2px solid var(--orange);
+  outline: none;
+  transition: all 0.3s ease;
+}
+
+.container input:focus {
+  border: 2px solid var(--light-orange);
+}
+
+.container button {
+  border-radius: 5px;
+  width: 100%;
+  background-color: var(--beige);
+  padding: 10px 20px;
+  margin: 10px 0;
+  border: none;
+  font-weight: 600;
+  font-size: 18px;
+  transition: all 0.3s ease;
+}
+
+.container button:hover {
+  background-color: var(--orange);
+  cursor: pointer;
+}
+
+.container button:active {
+  background-color: var(--light-orange);
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
   }
-  
-  :root {
-    --orange: #D4A373;
-    --light-orange: #FAEDCD;
-    --light-yellow: #FEFAE0;
-    --beige: #E9EDC9;
-    --light-green: #CCD5AE;
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-5px);
   }
-  
-  body {
-    background: rgb(189, 224, 254);
-    background: radial-gradient(
-      circle,
-      var(--beige) 0%,
-      var(--light-orange) 50%,
-      var(--orange) 100%
-    );
-    height: 100vh;
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(5px);
   }
-  
+}
+
+#boxImage {
+  width: 200px;
+  border-radius: 5px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease;
+}
+
+#boxImage img {
+  width: 100%;
+  padding: 10px;
+}
+
+#boxImage.show-img {
+  max-height: 300px;
+  margin: 10px auto;
+  border: 2px solid var(--orange);
+  max-height: 1;
+}
+#telecharger {
+  display: none;
+}
+#telecharger.show-btn {
+  display: block;
+}
+@media screen and (max-width: 420px) {
   .container {
-    width: 400px;
-    padding: 25px 35px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    width: 95vw;
   }
-  
-  .container p{
-      font-weight: 600;
-      color: var(--orange);
-      font-size: 18px;
-      margin-bottom: 0.5rem;
-  }
-  
-  .container input{
-      width: 100%;
-      padding: 10px 20px;
-      margin: 10px 0;
-      font-size: 18px;
-      border-radius: 5px;
-      border: 2px solid var(--orange);
-      outline: none;
-      transition: all 0.3s ease;
-  }
-  
-  .container input:focus{
-      border: 2px solid var(--light-orange);
-  }
-  
-  .container button{
-      border-radius: 5px;
-      width: 100%;
-      background-color: var(--beige);
-      padding: 10px 20px;
-      margin: 10px 0;
-      border: none;
-      font-weight: 600;
-      font-size: 18px;
-      transition: all 0.3s ease;
-  }
-  
-  .container button:hover{
-      background-color: var(--orange);
-      cursor: pointer;
-  }
-  
-  .container button:active{
-      background-color: var(--light-orange);
-  }
-  
-  @keyframes shake {
-      0%,
-      100% {
-          transform: translateX(0);
-      }
-      10%,
-      30%,
-      50%,
-      70%,
-      90% {
-          transform: translateX(-5px);
-      }
-      20%,
-      40%,
-      60%,
-      80% {
-          transform: translateX(5px);
-      }
-  }
-  
-  #boxImage{
-      width: 200px;
-      border-radius: 5px;
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.5s ease;
-  }
-  
-  #boxImage img{
-      width: 100%;
-      padding: 10px;
-  }
-  
-  #boxImage.show-img{
-      max-height: 300px;
-      margin: 10px auto;
-      border: 2px solid var(--orange);
-      max-height: 1;
-  }
-  
-  @media screen and (max-width: 420px) {
-      .container {
-          width: 95vw;
-        }
-  }
+}
