--- a/qrcode-generator/style.css
+++ b/qrcode-generator/style.css
@@ -7,7 +7,7 @@
 
 :root {
   --orange: #d4a373;
-  --light-orange: #faedcd;
+  --light-orange: #ffeab5;
   --light-yellow: #fefae0;
   --beige: #e9edc9;
   --light-green: #ccd5ae;
@@ -17,8 +17,7 @@ body {
   background: rgb(189, 224, 254);
   background: radial-gradient(
     circle,
-    var(--beige) 0%,
-    var(--light-orange) 50%,
+    var(--light-orange) 20%,
     var(--orange) 100%
   );
   height: 100vh;
@@ -118,6 +117,7 @@ body {
   border: 2px solid var(--orange);
   max-height: 1;
 }
+
 #telecharger {
   display: none;
 }
